# simple-shorts-ai-app

./: .gitignore  .mise.toml  .yarnrc.yml  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
docs/: build-windows.md
docs/superpowers/plans/: 2026-05-07-m1-project-skeleton.md  2026-05-07-m2-settings-page.md  2026-05-07-m3-youtube-preview-download.md  2026-05-08-m4-python-sidecar-stt.md  2026-05-09-m5-llm-highlight-extraction.md  2026-05-09-m6-end-to-end-render.md  2026-05-09-m7-smart-face-tracking.md  2026-05-10-camera-smoothing.md  2026-05-10-m10-segment-based-highlights.md  2026-05-10-m11-llm-local.md  2026-05-10-m12-packaging.md  (+7 more)
nsis/: installer.nsh
scripts/: fetch-runtime.test.ts  fetch-runtime.ts  rebuild-sqlite3-win.ts  runtime-versions.json
sidecar/: README.md  pyproject.toml  requirements.txt
sidecar/src/shorts_sidecar/: __init__.py  __main__.py  face_tracker.py  llm_engine.py  rpc.py  server.py  whisper_engine.py
sidecar/tests/: test_face_tracker.py  test_llm_engine.py  test_rpc.py  test_server.py  test_whisper_engine.py
src/main/: main.ts  preload.ts
src/renderer/: App.tsx  index.html  main.tsx  router.tsx
src/shared/: extract.ts  highlight.ts  history.ts  ipc.ts  render.ts  resume.ts  settings.ts  setup.ts  shortLayout.ts  track.ts  transcribe.ts  transcript.ts  youtube.test.ts  youtube.ts
tests/: setup.ts
tests/renderer/: App.test.tsx  History.test.tsx  NewJob.test.tsx  Settings.test.tsx  Setup.test.tsx  TranscribeCard.test.tsx
(+96 files in other folders)
