[project]
name = "shorts-sidecar"
version = "0.1.0"
description = "Local STT + (later) face tracking sidecar for simple-shorts-ai-app."
requires-python = ">=3.11,<3.13"
dependencies = [
  "faster-whisper>=1.0.3",
  "mediapipe>=0.10.18",
  "opencv-python>=4.10",
  "llama-cpp-python>=0.3.22",
  "huggingface-hub==0.26.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shorts_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
